--- a/SimpleWeather.UWP.Shared/Strings/de/Resources.resw
+++ b/SimpleWeather.UWP.Shared/Strings/de/Resources.resw
@@ -117,6 +117,119 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="action_settings" xml:space="preserve">
+    <value>Einstellungen</value>
+    <comment>This would be the shortest translation.</comment>
+  </data>
+  <data name="action_retry" xml:space="preserve">
+    <value>Erneut versuchen</value>
+    <comment>Even &quot;Erneut&quot; would be too long.</comment>
+  </data>
+  <data name="label_high" xml:space="preserve">
+    <value>Höchst-</value>
+  </data>
+  <data name="label_low" xml:space="preserve">
+    <value>Tiefstwerte</value>
+  </data>
+  <data name="label_dewpoint" xml:space="preserve">
+    <value>Taupunkt</value>
+  </data>
+  <data name="label_moonrise" xml:space="preserve">
+    <value>Mondaufgang</value>
+  </data>
+  <data name="label_moonset" xml:space="preserve">
+    <value>Monduntergang</value>
+  </data>
+  <data name="label_moonphase" xml:space="preserve">
+    <value>Mondphase</value>
+  </data>
+  <data name="label_beaufort" xml:space="preserve">
+    <value>Beaufort</value>
+  </data>
+  <data name="label_uv" xml:space="preserve">
+    <value>UV-Index</value>
+  </data>
+  <data name="label_airquality" xml:space="preserve">
+    <value>Luftqualitätsindex</value>
+  </data>
+  <data name="label_afternoon" xml:space="preserve">
+    <value>Nachmittag</value>
+  </data>
+  <data name="label_eve" xml:space="preserve">
+    <value>Abend</value>
+  </data>
+  <data name="label_morning" xml:space="preserve">
+    <value>Morgen</value>
+  </data>
+  <data name="label_night" xml:space="preserve">
+    <value>Nacht</value>
+  </data>
+  <data name="label_temp" xml:space="preserve">
+    <value>Temp</value>
+    <comment>Abbreviated from temperature or from temporary?</comment>
+  </data>
+  <data name="message_enter_apikey" xml:space="preserve">
+    <value>Anbieterschlüssel eingeben</value>
+  </data>
+  <data name="error_message_weather_region_unsupported" xml:space="preserve">
+    <value>Dieses Land wird von diesem Wetteranbieter nicht unterstützt</value>
+    <comment>Fuzzy</comment>
+  </data>
+  <data name="action_editmode" xml:space="preserve">
+    <value>Bearbeiten</value>
+  </data>
+  <data name="label_currentlocation" xml:space="preserve">
+    <value>Standort</value>
+  </data>
+  <data name="label_favoritelocations" xml:space="preserve">
+    <value>Favoriten</value>
+  </data>
+  <data name="error_location_denied" xml:space="preserve">
+    <value>Standortzugriff verweigert</value>
+  </data>
+  <data name="error_retrieve_location" xml:space="preserve">
+    <value>Standort nicht verfügbar</value>
+  </data>
+  <data name="error_noresults" xml:space="preserve">
+    <value>Keine Ergebnisse gefunden</value>
+  </data>
+  <data name="message_locationremoved" xml:space="preserve">
+    <value>Ort entfernt</value>
+  </data>
+  <data name="message_needfavorite" xml:space="preserve">
+    <value>Mindestens ein Favorit erforderlich</value>
+  </data>
+  <data name="undo" xml:space="preserve">
+    <value>Rückgängig</value>
+  </data>
+  <data name="delete" xml:space="preserve">
+    <value>Löschen</value>
+  </data>
+  <data name="werror_noweather" xml:space="preserve">
+    <value>Laden von Wetterdaten nicht möglich</value>
+    <comment>Weather Exceptions</comment>
+  </data>
+  <data name="werror_networkerror" xml:space="preserve">
+    <value>Netzwerkverbindungsfehler</value>
+  </data>
+  <data name="werror_invalidkey" xml:space="preserve">
+    <value>Ungültiger Anbieterschlüssel</value>
+  </data>
+  <data name="werror_querynotfound" xml:space="preserve">
+    <value>Keine passenden Städte gefunden</value>
+  </data>
+  <data name="werror_unknown" xml:space="preserve">
+    <value>Unbekannter Fehler</value>
+  </data>
+  <data name="update_prefix" xml:space="preserve">
+    <value>Aktualisiert am</value>
+  </data>
+  <data name="update_prefix_day" xml:space="preserve">
+    <value>Aktualisiert um</value>
+  </data>
+  <data name="datetime_validuntil" xml:space="preserve">
+    <value>Gültig bis</value>
+  </data>
   <data name="About.Content" xml:space="preserve">
     <value>Über</value>
     <comment>Fuzzy</comment>
@@ -132,9 +245,6 @@
   </data>
   <data name="Credits.Content" xml:space="preserve">
     <value>Danksagungen</value>
-  </data>
-  <data name="Error_Location" xml:space="preserve">
-    <value>Standort nicht verfügbar</value>
   </data>
   <data name="General.Content" xml:space="preserve">
     <value>Allgemein</value>
@@ -161,12 +271,6 @@
   <data name="Label_Done" xml:space="preserve">
     <value>Erledigt</value>
   </data>
-  <data name="Label_Edit" xml:space="preserve">
-    <value>Bearbeiten</value>
-  </data>
-  <data name="Label_ErrLocationDenied" xml:space="preserve">
-    <value>Standortzugriff verweigert</value>
-  </data>
   <data name="Label_FeelsLike.Text" xml:space="preserve">
     <value>Gefühlt</value>
   </data>
@@ -191,9 +295,6 @@
   <data name="Label_Rain.Text" xml:space="preserve">
     <value>Regen</value>
   </data>
-  <data name="Label_Settings" xml:space="preserve">
-    <value>Einstellungen</value>
-  </data>
   <data name="Label_Snow.Text" xml:space="preserve">
     <value>Schnee</value>
   </data>
@@ -217,6 +318,7 @@
   </data>
   <data name="Message_EnterAPIKey.Text" xml:space="preserve">
     <value>Anbieterschlüssel eingeben</value>
+    <comment>message_enter_apikey</comment>
   </data>
   <data name="Msg_LocDeniedSettings" xml:space="preserve">
     <value>Standortdienste in Einstellungen aktivieren</value>
@@ -242,29 +344,8 @@
   <data name="Pref_TitleProviders.Text" xml:space="preserve">
     <value>Wetteranbieter</value>
   </data>
-  <data name="WError_InvalidKey" xml:space="preserve">
-    <value>Ungültiger Anbieterschlüssel</value>
-  </data>
-  <data name="WError_NetworkError" xml:space="preserve">
-    <value>Netzwerkverbindungsfehler</value>
-  </data>
-  <data name="WError_NoWeather" xml:space="preserve">
-    <value>Laden von Wetterdaten nicht möglich</value>
-  </data>
-  <data name="WError_QueryNotFound" xml:space="preserve">
-    <value>Keine passenden Städte gefunden</value>
-  </data>
-  <data name="Error_NoResults" xml:space="preserve">
-    <value>Keine Ergebnisse gefunden</value>
-  </data>
   <data name="KeyEntry.Text" xml:space="preserve">
     <value>Anbieterschlüssel</value>
-  </data>
-  <data name="Msg_EnterAPIKey" xml:space="preserve">
-    <value>Anbieterschlüssel eingeben</value>
-  </data>
-  <data name="Action_Retry" xml:space="preserve">
-    <value>Erneut versuchen</value>
   </data>
   <data name="Pref_GeneralHeader.Text" xml:space="preserve">
     <value>Allgemeine Einstellungen</value>
@@ -289,12 +370,6 @@
   </data>
   <data name="Pref_Refresh6Hrs.Text" xml:space="preserve">
     <value>6 Stunden</value>
-  </data>
-  <data name="Update_Prefix" xml:space="preserve">
-    <value>Aktualisiert am</value>
-  </data>
-  <data name="Update_PrefixDay" xml:space="preserve">
-    <value>Aktualisiert um</value>
   </data>
   <data name="Credit_Prefix.Text" xml:space="preserve">
     <value>Daten von</value>
@@ -324,9 +399,6 @@
     <value>vor {0} Sekunden</value>
     <comment>Fuzzy</comment>
   </data>
-  <data name="DateTime_ValidUntil" xml:space="preserve">
-    <value>Gültig bis</value>
-  </data>
   <data name="Button_Refresh.Label" xml:space="preserve">
     <value>Aktualisieren</value>
   </data>
@@ -338,9 +410,6 @@
   </data>
   <data name="Precipitation_Label" xml:space="preserve">
     <value>Niederschlag</value>
-  </data>
-  <data name="Temp_Label" xml:space="preserve">
-    <value>Temp</value>
   </data>
   <data name="Wind_Label" xml:space="preserve">
     <value>Wind</value>
@@ -356,41 +425,14 @@
   <data name="RegisterKeyBox.Content" xml:space="preserve">
     <value>Benutzerkonto zum Erhalt eines Anbieterschlüssels erstellen</value>
   </data>
-  <data name="WError_Unknown" xml:space="preserve">
-    <value>Unbekannter Fehler</value>
-  </data>
   <data name="ConfirmDialog.PrimaryButtonText" xml:space="preserve">
     <value>Ok</value>
   </data>
   <data name="ConfirmDialog.SecondaryButtonText" xml:space="preserve">
     <value>Abbrechen</value>
   </data>
-  <data name="Label_High" xml:space="preserve">
-    <value>Höchst-</value>
-  </data>
-  <data name="Label_Low" xml:space="preserve">
-    <value>Tiefstwerte</value>
-  </data>
   <data name="Pref_PersonalKey.Text" xml:space="preserve">
     <value>Persönlichen Anbieterschlüssel benutzen:</value>
-  </data>
-  <data name="Beaufort_Label" xml:space="preserve">
-    <value>Beaufort</value>
-  </data>
-  <data name="Dewpoint_Label" xml:space="preserve">
-    <value>Taupunkt</value>
-  </data>
-  <data name="Moonrise_Label" xml:space="preserve">
-    <value>Mondaufgang</value>
-  </data>
-  <data name="Moonset_Label" xml:space="preserve">
-    <value>Monduntergang</value>
-  </data>
-  <data name="UV_Label" xml:space="preserve">
-    <value>UV-Index</value>
-  </data>
-  <data name="Label_Delete" xml:space="preserve">
-    <value>Löschen</value>
   </data>
   <data name="Label_Temperature.Text" xml:space="preserve">
     <value>Temperatur</value>
@@ -410,41 +452,11 @@
   <data name="Setup_PreferencesPrompt.Text" xml:space="preserve">
     <value>Einstellungen anpassen</value>
   </data>
-  <data name="Action_Undo" xml:space="preserve">
-    <value>Rückgängig</value>
-  </data>
-  <data name="Message_LocationRemoved" xml:space="preserve">
-    <value>Ort entfernt</value>
-  </data>
-  <data name="Message_NeedFavorite" xml:space="preserve">
-    <value>Mindestens ein Favorit erforderlich</value>
-  </data>
-  <data name="Error_WeatherUSOnly" xml:space="preserve">
-    <value>Dieser Wetteranbieter unterstützt nur Orte in den USA</value>
-  </data>
-  <data name="Header_FavLocations" xml:space="preserve">
-    <value>Favoriten</value>
-  </data>
-  <data name="Header_GPSLocation" xml:space="preserve">
-    <value>Standort</value>
-  </data>
   <data name="AQI_Label" xml:space="preserve">
     <value>Luftqualitätsindex</value>
   </data>
   <data name="Label_Radar.Header" xml:space="preserve">
     <value>Radar</value>
-  </data>
-  <data name="Label_Day" xml:space="preserve">
-    <value>Nachmittag</value>
-  </data>
-  <data name="Label_Eve" xml:space="preserve">
-    <value>Abend</value>
-  </data>
-  <data name="Label_Morning" xml:space="preserve">
-    <value>Morgen</value>
-  </data>
-  <data name="Label_Night" xml:space="preserve">
-    <value>Nacht</value>
   </data>
   <data name="Nav_WeatherAlerts.Content" xml:space="preserve">
     <value>Wetterwarnungen</value>
@@ -503,14 +515,16 @@
   <data name="Pref_Features_Title.Text" xml:space="preserve">
     <value>Funktionen</value>
   </data>
-  <data name="MoonPhase_Label" xml:space="preserve">
-    <value>Mondphase</value>
+  <data name="label_series" xml:space="preserve">
+    <value>Verlauf</value>
+    <comment>LineView</comment>
+  </data>
+  <data name="label_windgust" xml:space="preserve">
+    <value>Windböe</value>
+    <comment>Fuzzy</comment>
   </data>
   <data name="WindGust_Label" xml:space="preserve">
     <value>Windböe</value>
-  </data>
-  <data name="Label_Series" xml:space="preserve">
-    <value>Verlauf</value>
   </data>
   <data name="Attrib_Prefix.Text" xml:space="preserve">
     <value>Foto von</value>
@@ -536,9 +550,6 @@
   <data name="NoUpdateAvailablePrompt" xml:space="preserve">
     <value>Keine Aktualisierungen verfügbar</value>
   </data>
-  <data name="UpdateAvailablePrompt" xml:space="preserve">
-    <value>Aktualisierung verfügbar. Zum Installieren klicken</value>
-  </data>
   <data name="DownloadingPrompt" xml:space="preserve">
     <value>Lädt herunter...</value>
   </data>
@@ -555,6 +566,9 @@
   <data name="TranslateButton.Content" xml:space="preserve">
     <value>Bei der Übersetzung der Anwendung helfen</value>
     <comment>Can be changed to &apos;Help us translate the app&apos;</comment>
+  </data>
+  <data name="prompt_update_available" xml:space="preserve">
+    <value>Aktualisierung verfügbar. Zum Installieren klicken</value>
   </data>
   <data name="pref_title_resetunits" xml:space="preserve">
     <value>Einheiten auf Standardwerte zurücksetzen</value>
@@ -582,5 +596,25 @@
   </data>
   <data name="Pref_Refresh30Min.Text" xml:space="preserve">
     <value>30 Minuten</value>
+  </data>
+  <data name="label_day" xml:space="preserve">
+    <value>Tag</value>
+  </data>
+  <data name="Pref_Title_DailyNotification.Text" xml:space="preserve">
+    <value>Tägliche Benachrichtigung:</value>
+  </data>
+  <data name="Pref_Title_Time.Header" xml:space="preserve">
+    <value>Zeit</value>
+  </data>
+  <data name="Pref_Title_PrecipNotification.Text" xml:space="preserve">
+    <value>Niederschlagsbenachrichtigung:</value>
+  </data>
+  <data name="Precipitation_Text_Format" xml:space="preserve">
+    <value>{0}% Chance auf Regen in {1}</value>
+    <comment>{0} = Percentage; {1} = time in hours/minutes</comment>
+  </data>
+  <data name="Precipitation_NextHour_Text_Format" xml:space="preserve">
+    <value>{0}% Chance auf Regen in der nächsten Stunde</value>
+    <comment>{0} = Percentage</comment>
   </data>
 </root>
