--- a/SimpleWeather.UWP.Shared/Strings/es/WeatherConditions.resw
+++ b/SimpleWeather.UWP.Shared/Strings/es/WeatherConditions.resw
@@ -122,133 +122,139 @@
     <comment>Conditions</comment>
   </data>
   <data name="weather_tropicalstorm" xml:space="preserve">
-    <value>Burza tropikalna</value>
+    <value>Tormenta tropical</value>
   </data>
   <data name="weather_hurricane" xml:space="preserve">
-    <value>Huragan</value>
+    <value>Huracán</value>
   </data>
   <data name="weather_severetstorms" xml:space="preserve">
-    <value>Silne burze</value>
+    <value>Tormentas severas</value>
   </data>
   <data name="weather_tstorms" xml:space="preserve">
-    <value>Burze</value>
+    <value>Tormentas</value>
   </data>
   <data name="weather_rainandsnow" xml:space="preserve">
-    <value>Deszcz ze śniegiem</value>
+    <value>Lluvia y nieve mezcladas</value>
+    <comment>Fuzzy</comment>
   </data>
   <data name="weather_rainandsleet" xml:space="preserve">
-    <value>Deszcz oraz deszcz ze śniegiem</value>
+    <value>Lluvia y aguanieve mezcladas</value>
+    <comment>Fuzzy</comment>
   </data>
   <data name="weather_snowandsleet" xml:space="preserve">
-    <value>Śnieg oraz deszcz ze śniegiem</value>
+    <value>Mezcla de nieve y aguanieve</value>
+    <comment>Fuzzy</comment>
   </data>
   <data name="weather_freezingrain" xml:space="preserve">
-    <value>Marznący deszcz</value>
+    <value>Lluvia helada</value>
   </data>
   <data name="weather_snowflurries" xml:space="preserve">
-    <value>Przelotne opady śniegu</value>
+    <value>Copos de nieve</value>
   </data>
   <data name="weather_lightsnowshowers" xml:space="preserve">
-    <value>Lekkie opady śniegu</value>
+    <value>Nieve ligera</value>
   </data>
   <data name="weather_blowingsnow" xml:space="preserve">
-    <value>Zawieja</value>
+    <value>Soplando nieve</value>
+    <comment>Fuzzy</comment>
   </data>
   <data name="weather_snow" xml:space="preserve">
-    <value>Śnieg</value>
+    <value>Nieve</value>
   </data>
   <data name="weather_hail" xml:space="preserve">
-    <value>Grad</value>
+    <value>Granizo</value>
   </data>
   <data name="weather_sleet" xml:space="preserve">
-    <value>Gołoledź</value>
+    <value>Aguanieve</value>
   </data>
   <data name="weather_dust" xml:space="preserve">
-    <value>Pył</value>
+    <value>Polvo</value>
   </data>
   <data name="weather_foggy" xml:space="preserve">
-    <value>Mgła</value>
+    <value>Niebla</value>
   </data>
   <data name="weather_haze" xml:space="preserve">
-    <value>Zmętnienie</value>
+    <value>Calina</value>
   </data>
   <data name="weather_smoky" xml:space="preserve">
-    <value>Dym</value>
+    <value>Ahumado</value>
   </data>
   <data name="weather_windy" xml:space="preserve">
-    <value>Wietrznie</value>
+    <value>Ventoso</value>
   </data>
   <data name="weather_cold" xml:space="preserve">
-    <value>Zimno</value>
+    <value>Frío</value>
   </data>
   <data name="weather_cloudy" xml:space="preserve">
-    <value>Pochmurno</value>
+    <value>Nublado</value>
   </data>
   <data name="weather_mostlycloudy" xml:space="preserve">
-    <value>Przeważnie pochmurno</value>
+    <value>Mayormente nublado</value>
   </data>
   <data name="weather_partlycloudy" xml:space="preserve">
-    <value>Częściowe zachmurzenie</value>
+    <value>Parcialmente nublado</value>
   </data>
   <data name="weather_clear" xml:space="preserve">
-    <value>Bezchmurnie</value>
+    <value>Claro</value>
   </data>
   <data name="weather_sunny" xml:space="preserve">
-    <value>Słonecznie</value>
+    <value>Soleado</value>
   </data>
   <data name="weather_fair" xml:space="preserve">
-    <value>Ładnie</value>
+    <value>Buen tiempo</value>
+    <comment>Fuzzy</comment>
   </data>
   <data name="weather_rainandhail" xml:space="preserve">
-    <value>Deszcz z gradem</value>
+    <value>Mezcla de lluvia y granizo</value>
   </data>
   <data name="weather_hot" xml:space="preserve">
-    <value>Gorąco</value>
+    <value>Caliente</value>
   </data>
   <data name="weather_isotstorms" xml:space="preserve">
-    <value>Lokalne burze</value>
+    <value>Tormentas aisladas</value>
   </data>
   <data name="weather_scatteredtstorms" xml:space="preserve">
-    <value>Rozproszone burze</value>
+    <value>Tormentas dispersas</value>
   </data>
   <data name="weather_scatteredshowers" xml:space="preserve">
-    <value>Rozproszone przelotne opady</value>
+    <value>Chubascos dispersos</value>
   </data>
   <data name="weather_heavysnow" xml:space="preserve">
-    <value>Silne opady śniegu</value>
+    <value>Fuertes nevadas</value>
   </data>
   <data name="weather_notavailable" xml:space="preserve">
     <value>N/A</value>
     <comment>Not Available</comment>
   </data>
   <data name="weather_fog" xml:space="preserve">
-    <value>Mgła</value>
+    <value>Niebla</value>
   </data>
   <data name="weather_lightrain" xml:space="preserve">
-    <value>Lekki deszcz</value>
+    <value>Lluvia ligera</value>
   </data>
   <data name="weather_rain" xml:space="preserve">
-    <value>Deszcz</value>
+    <value>Lluvia</value>
   </data>
   <data name="weather_rainshowers" xml:space="preserve">
-    <value>Przelotne deszcze</value>
+    <value>Chubascos</value>
   </data>
   <data name="weather_blizzard" xml:space="preserve">
-    <value>Śnieżyca</value>
+    <value>Ventisca</value>
   </data>
   <data name="weather_overcast" xml:space="preserve">
-    <value>Zachmurzenie całkowite</value>
+    <value>Nublado</value>
   </data>
   <data name="weather_sleet_tstorms" xml:space="preserve">
-    <value>Burza i gołoledź</value>
+    <value>Aguanieve y truenos</value>
+    <comment>Fuzzy</comment>
   </data>
   <data name="weather_snow_tstorms" xml:space="preserve">
-    <value>Śnieg i burza</value>
+    <value>Nieve y trueno</value>
   </data>
   <data name="weather_clearsky" xml:space="preserve">
-    <value>Czyste niebo</value>
+    <value>Cielo despejado</value>
   </data>
   <data name="weather_heavyrain" xml:space="preserve">
-    <value>Silny deszcz</value>
+    <value>Lluvias fuertes</value>
   </data>
 </root>
