--- a/SimpleWeather.UWP.Shared/Strings/es/WindDirection.resw
+++ b/SimpleWeather.UWP.Shared/Strings/es/WindDirection.resw
@@ -117,138 +117,68 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="weather_tornado" xml:space="preserve">
-    <value>Tornado</value>
-    <comment>Conditions</comment>
+  <data name="wind_dir_n" xml:space="preserve">
+    <value>N</value>
+    <comment>North</comment>
   </data>
-  <data name="weather_tropicalstorm" xml:space="preserve">
-    <value>Burza tropikalna</value>
+  <data name="wind_dir_nne" xml:space="preserve">
+    <value>NNE</value>
+    <comment>North-North East</comment>
   </data>
-  <data name="weather_hurricane" xml:space="preserve">
-    <value>Huragan</value>
+  <data name="wind_dir_ne" xml:space="preserve">
+    <value>NE</value>
+    <comment>North-East</comment>
   </data>
-  <data name="weather_severetstorms" xml:space="preserve">
-    <value>Silne burze</value>
+  <data name="wind_dir_ene" xml:space="preserve">
+    <value>ENE</value>
+    <comment>East North-East</comment>
   </data>
-  <data name="weather_tstorms" xml:space="preserve">
-    <value>Burze</value>
+  <data name="wind_dir_e" xml:space="preserve">
+    <value>E</value>
+    <comment>East</comment>
   </data>
-  <data name="weather_rainandsnow" xml:space="preserve">
-    <value>Deszcz ze śniegiem</value>
+  <data name="wind_dir_ese" xml:space="preserve">
+    <value>ESE</value>
+    <comment>East South-East</comment>
   </data>
-  <data name="weather_rainandsleet" xml:space="preserve">
-    <value>Deszcz oraz deszcz ze śniegiem</value>
+  <data name="wind_dir_se" xml:space="preserve">
+    <value>SE</value>
+    <comment>South-East</comment>
   </data>
-  <data name="weather_snowandsleet" xml:space="preserve">
-    <value>Śnieg oraz deszcz ze śniegiem</value>
+  <data name="wind_dir_sse" xml:space="preserve">
+    <value>SSE</value>
+    <comment>South South-East</comment>
   </data>
-  <data name="weather_freezingrain" xml:space="preserve">
-    <value>Marznący deszcz</value>
+  <data name="wind_dir_s" xml:space="preserve">
+    <value>S</value>
+    <comment>South</comment>
   </data>
-  <data name="weather_snowflurries" xml:space="preserve">
-    <value>Przelotne opady śniegu</value>
+  <data name="wind_dir_ssw" xml:space="preserve">
+    <value>SSO</value>
+    <comment>South South-West</comment>
   </data>
-  <data name="weather_lightsnowshowers" xml:space="preserve">
-    <value>Lekkie opady śniegu</value>
+  <data name="wind_dir_sw" xml:space="preserve">
+    <value>SO</value>
+    <comment>South-West</comment>
   </data>
-  <data name="weather_blowingsnow" xml:space="preserve">
-    <value>Zawieja</value>
+  <data name="wind_dir_wsw" xml:space="preserve">
+    <value>OSO</value>
+    <comment>West South-West</comment>
   </data>
-  <data name="weather_snow" xml:space="preserve">
-    <value>Śnieg</value>
+  <data name="wind_dir_w" xml:space="preserve">
+    <value>O</value>
+    <comment>West</comment>
   </data>
-  <data name="weather_hail" xml:space="preserve">
-    <value>Grad</value>
+  <data name="wind_dir_wnw" xml:space="preserve">
+    <value>ONO</value>
+    <comment>West North-West</comment>
   </data>
-  <data name="weather_sleet" xml:space="preserve">
-    <value>Gołoledź</value>
+  <data name="wind_dir_nw" xml:space="preserve">
+    <value>NO</value>
+    <comment>North-West</comment>
   </data>
-  <data name="weather_dust" xml:space="preserve">
-    <value>Pył</value>
-  </data>
-  <data name="weather_foggy" xml:space="preserve">
-    <value>Mgła</value>
-  </data>
-  <data name="weather_haze" xml:space="preserve">
-    <value>Zmętnienie</value>
-  </data>
-  <data name="weather_smoky" xml:space="preserve">
-    <value>Dym</value>
-  </data>
-  <data name="weather_windy" xml:space="preserve">
-    <value>Wietrznie</value>
-  </data>
-  <data name="weather_cold" xml:space="preserve">
-    <value>Zimno</value>
-  </data>
-  <data name="weather_cloudy" xml:space="preserve">
-    <value>Pochmurno</value>
-  </data>
-  <data name="weather_mostlycloudy" xml:space="preserve">
-    <value>Przeważnie pochmurno</value>
-  </data>
-  <data name="weather_partlycloudy" xml:space="preserve">
-    <value>Częściowe zachmurzenie</value>
-  </data>
-  <data name="weather_clear" xml:space="preserve">
-    <value>Bezchmurnie</value>
-  </data>
-  <data name="weather_sunny" xml:space="preserve">
-    <value>Słonecznie</value>
-  </data>
-  <data name="weather_fair" xml:space="preserve">
-    <value>Ładnie</value>
-  </data>
-  <data name="weather_rainandhail" xml:space="preserve">
-    <value>Deszcz z gradem</value>
-  </data>
-  <data name="weather_hot" xml:space="preserve">
-    <value>Gorąco</value>
-  </data>
-  <data name="weather_isotstorms" xml:space="preserve">
-    <value>Lokalne burze</value>
-  </data>
-  <data name="weather_scatteredtstorms" xml:space="preserve">
-    <value>Rozproszone burze</value>
-  </data>
-  <data name="weather_scatteredshowers" xml:space="preserve">
-    <value>Rozproszone przelotne opady</value>
-  </data>
-  <data name="weather_heavysnow" xml:space="preserve">
-    <value>Silne opady śniegu</value>
-  </data>
-  <data name="weather_notavailable" xml:space="preserve">
-    <value>N/A</value>
-    <comment>Not Available</comment>
-  </data>
-  <data name="weather_fog" xml:space="preserve">
-    <value>Mgła</value>
-  </data>
-  <data name="weather_lightrain" xml:space="preserve">
-    <value>Lekki deszcz</value>
-  </data>
-  <data name="weather_rain" xml:space="preserve">
-    <value>Deszcz</value>
-  </data>
-  <data name="weather_rainshowers" xml:space="preserve">
-    <value>Przelotne deszcze</value>
-  </data>
-  <data name="weather_blizzard" xml:space="preserve">
-    <value>Śnieżyca</value>
-  </data>
-  <data name="weather_overcast" xml:space="preserve">
-    <value>Zachmurzenie całkowite</value>
-  </data>
-  <data name="weather_sleet_tstorms" xml:space="preserve">
-    <value>Burza i gołoledź</value>
-  </data>
-  <data name="weather_snow_tstorms" xml:space="preserve">
-    <value>Śnieg i burza</value>
-  </data>
-  <data name="weather_clearsky" xml:space="preserve">
-    <value>Czyste niebo</value>
-  </data>
-  <data name="weather_heavyrain" xml:space="preserve">
-    <value>Silny deszcz</value>
+  <data name="wind_dir_nnw" xml:space="preserve">
+    <value>NNO</value>
+    <comment>North North-West</comment>
   </data>
 </root>
